Vector API parsing option